# OpenCreativity

./: cabal.project.local  ocGUI.cabal
app/: Main.hs  Types.hs
